syntax = "proto3";

option java_multiple_files = true;
option java_package = "kvpb";
option java_outer_classname = "kvpb";

import "google/api/annotations.proto";

package kvpb;

message GetRequest {
    bytes key = 1;
}

message GetResponse {
    bytes value = 1;
    string error = 2;
}

message PutRequest {
    bytes key = 1;
    bytes value = 2;
}

message PutResponse {
    string error = 1;
}

message DeleteRequest {
    bytes key = 1;
}

message DeleteResponse {
    string error = 1;
}

service MTikvService{
    rpc Get (GetRequest) returns (GetResponse) {
        option (google.api.http) = {
            get: "/api/record/{key}"
        };
    }

    rpc Put (PutRequest) returns (PutResponse) {
        option (google.api.http) = {
            post: "/api/record"
            body: "*"
        };
    }

    rpc Delete (DeleteRequest) returns (DeleteResponse) {
        option (google.api.http) = {
            delete: "/api/record/{key}"
        };
    }
}